--- a/designdigital.html
+++ b/designdigital.html
@@ -8,6 +8,9 @@
 	<meta name="description" content="#">
 	<meta name="keywords" content="#">
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
 </head>
 <body>
 	<div class="container clearfix">
@@ -21,13 +24,13 @@
 						<a href="menu1.html">Menu 1</a>
 					</li>
 					<li>
-						<a href="menu2.html">Menu2</a>
+						<a href="menu2.html">Menu 2</a>
 					</li>
 					<li>
-						<a href="menu3.html">Menu3</a>
+						<a href="menu3.html">Menu 3</a>
 					</li>
 					<li>
-						<a href="menu4.html">Menu4</a>
+						<a href="menu4.html">Menu 4</a>
 					</li>
 				</ul>
 			</nav>
